[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphs_Luicazen"
version = "0.0.1"
authors = [
  { name="Sarah", email="smcdowe4@msudenver.edu" },
]
description = "Shortest Path"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Luicazen/Homework4"
"Bug Tracker" = "https://github.com/Luicazen/Homework4"